kubernetes/ordering-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: pizza-castle-ordering-service
spec:
  type: NodePort
  ports:
    - port: 5002
      targetPort: 5002
  selector:
    name: pizza-castle-ordering-service
